[gd_scene load_steps=13 format=3 uid="uid://c6632xlskqav1"]

[ext_resource type="Script" path="res://scripts/enemies/basic_enemy.gd" id="1_y81hh"]
[ext_resource type="Resource" uid="uid://bfg0wxgmaq3jp" path="res://resources/enemy_settings.res" id="2_cfiso"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_svinf"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_dy2pn"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_a6m1r"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_ftvpr"]
[ext_resource type="AudioStream" uid="uid://csft2h6kd6os0" path="res://audio/explosion.mp3" id="8_ju104"]

[sub_resource type="Curve3D" id="Curve3D_1kc8j"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tikdk"]
height = 0.75

[sub_resource type="Animation" id="Animation_g1hja"]
resource_name = "despawn"

[sub_resource type="Animation" id="Animation_37yv6"]
resource_name = "spawn"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bgo7t"]
_data = {
"despawn": SubResource("Animation_g1hja"),
"spawn": SubResource("Animation_37yv6")
}

[node name="basic_enemy" type="Node3D"]
script = ExtResource("1_y81hh")
enemy_settings = ExtResource("2_cfiso")

[node name="EnemyStateChart" type="Node" parent="."]
script = ExtResource("2_svinf")

[node name="CompoundState" type="Node" parent="EnemyStateChart"]
script = ExtResource("4_dy2pn")
initial_state = NodePath("Spawning")

[node name="Spawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_ftvpr")

[node name="ToTraveling" type="Node" parent="EnemyStateChart/CompoundState/Spawning"]
script = ExtResource("5_a6m1r")
to = NodePath("../../Traveling")
event = &"to_traveling"
delay_in_seconds = "0.0"

[node name="Traveling" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_ftvpr")

[node name="ToDamaging" type="Node" parent="EnemyStateChart/CompoundState/Traveling"]
script = ExtResource("5_a6m1r")
to = NodePath("../../Damaging")
event = &"to_damaging"
delay_in_seconds = "0.0"

[node name="ToDying" type="Node" parent="EnemyStateChart/CompoundState/Traveling"]
script = ExtResource("5_a6m1r")
to = NodePath("../../Dying")
event = &"to_dying"
delay_in_seconds = "0.0"

[node name="Despawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_ftvpr")

[node name="ToRemoveEnemy" type="Node" parent="EnemyStateChart/CompoundState/Despawning"]
script = ExtResource("5_a6m1r")
to = NodePath("../../RemoveEnemy")
event = &"to_remove_enemy"
delay_in_seconds = "0.0"

[node name="Damaging" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_ftvpr")

[node name="ToDespawning" type="Node" parent="EnemyStateChart/CompoundState/Damaging"]
script = ExtResource("5_a6m1r")
to = NodePath("../../Despawning")
event = &"to_despawning"
delay_in_seconds = "0.0"

[node name="Dying" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_ftvpr")

[node name="ToRemoveEnemy" type="Node" parent="EnemyStateChart/CompoundState/Dying"]
script = ExtResource("5_a6m1r")
to = NodePath("../../RemoveEnemy")
event = &"to_remove_enemy"
delay_in_seconds = "0.0"

[node name="RemoveEnemy" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_ftvpr")

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_1kc8j")

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
loop = false

[node name="Area3D" type="Area3D" parent="Path3D/PathFollow3D"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path3D/PathFollow3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_tikdk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bgo7t")
}

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ju104")
volume_db = -25.0
bus = &"FX"

[connection signal="state_entered" from="EnemyStateChart/CompoundState/Spawning" to="." method="_on_spawning_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Traveling" to="." method="_on_traveling_state_entered"]
[connection signal="state_processing" from="EnemyStateChart/CompoundState/Traveling" to="." method="_on_traveling_state_processing"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Despawning" to="." method="_on_despawning_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Damaging" to="." method="_on_damaging_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Dying" to="." method="_on_dying_state_entered"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/RemoveEnemy" to="." method="_on_remove_enemy_state_entered"]
[connection signal="area_entered" from="Path3D/PathFollow3D/Area3D" to="." method="_on_area_3d_area_entered"]
